[package]
name = "jmsrequest"
version = "1.0.0"
authors = ["sidhaler <seadhaler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "jmsrequest"
path = "src/main.rs"
[lib]
name = "many"
path = "src/lib.rs"
# for building windows .exe
[toolchain.optional]
rust-std = ["x86_64-pc-windows-gnu"]
[dependencies]
tokio = { version = "1", features = ["full"] }
structopt = "0.3.13"